<resources>
    <string name="app_name">BarCamp MDQ</string>
    <string name="prompt_email_hint"><i>Ingresá con tu e-mail</i></string>
    <string name="prompt_password_hint"><i>Contraseña (requerida)</i></string>
    <string name="action_sign_in">Acceder</string>
    <string name="error_invalid_email">Esta dirección de mail es inválida</string>
    <string name="error_invalid_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="error_password_required">Contraseña requerida</string>
    <string name="error_password_admin">Contraseña de Administrador</string>
    <string name="invalid_login">Verifique los errores y vuelva a intentarlo</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="board">Board</string>
    <string name="social">Social</string>
    <string name="single_talk">%1$s Charla</string>
    <string name="multiple_talk">%1$s Charlas</string>
    <string name="hashtag_barcamp">#BarcampMDQ</string>
    <string name="tweet">¡Twitteá!"</string>
    <string name="twitter_description">Compartí tu experiencia en Twitter</string>
    <string name="loading">Loading</string>
    <string name="talk_list_screen_title">Charlas de las %1$s hs</string>
    <string name="room_placeholder">Sala&#160;</string>
    <string name="speaker_placeholder">Orador:&#160;</string>
    <string name="description_placeholder">Descripción:&#160;%1$s</string>
    <string name="hint_talk_name">Nombre de la charla</string>
    <string name="hint_talk_speaker">Nombre del orador</string>
    <string name="room">Sala</string>
    <string name="available_rooms">Salas disponibles</string>
    <string name="add_talk">Inscripción de charla</string>
    <string name="hint_talk_description">Descripción (opcional)</string>
    <string name="load_talk">Cargar charla</string>
    <string name="edit_talk">Editar charla</string>
    <string name="save_talk">Guardar charla</string>
    <string name="load_photo">Cargar foto (opcional)</string>
    <string name="clear">Limpiar</string>
    <string name="empty_talks">No hay charlas disponibles</string>
    <string name="error_empty_name">El nombre no puede estar vacio</string>
    <string name="error_empty_speaker">El orador no puede estar vacio</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="delete_confirmation_message">¿Estas seguro de eliminar la charla \'%1$s\' ?</string>
    <string name="delayed">Demorada</string>
    <string name="not_delayed">No demorada</string>
    <string name="no_connection">No hay conexion</string>
    <string name="alert_connectivity_title">Conectividad</string>
    <string name="alert_connectivity_message">Se necesita conexión a internet para poder usar la app</string>
    <string name="alert_connectivity_ok_button">Entendido</string>
    <string name="wait">Espere..</string>
    <string name="full_rooms_message">No hay salas disponibles en esta franja horaria</string>
    <string name="break_item">Break</string>
    <string name="register_item">Registro</string>
    <string name="powered_by">POWERED BY</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="hint_talk_twitter_speaker">Twitter del orador (opcional)</string>
    <string name="board_empty_placeholder">¡Empezamos el 12 de Noviembre!</string>
    <string name="board_empty_desc_placeholder">El mismo día se habilita este tablero.\n¡Te esperamos!</string>
    <string name="description_empty_message">No hay más información para mostrar</string>
    <string name="permission_denied_message">No se puede realizar la acción por falta de permisos</string>
    <string name="board_item_hour">%1$s hs</string>
    <string name="saving">Guardando</string>
    <string name="lost_changes_confirmation_message">Los cambios hechos se perderán. Desea continuar?</string>
    <string name="yes">Si</string>
    <string name="delete_image_confirmation_message">La imagen se borrará y no se puede revertir. ¿Desea continuar?</string>
    <string name="delete_failure_message">No se pudo borrar la imagen</string>
    <string name="description_empty">Sin descripción</string>
    <string name="dummy_pass">dummy_pass</string>
</resources>
