<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="15dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="10dp">

    <TextView
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="15dp"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/submit_button"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/talk_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/talk_name"
                    style="@style/TalkFormFields"
                    android:hint="@string/hint_talk_name"
                    android:imeOptions="actionNext" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/talk_speaker_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/talk_speaker"
                    style="@style/TalkFormFields"
                    android:hint="@string/hint_talk_speaker"
                    android:imeOptions="actionNext" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/talk_room_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/room"
                    android:textColor="@color/color_hint_talk_float_text"
                    android:textSize="12sp" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/room_spinner"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="-8dp"
                    android:paddingLeft="-5dp"
                    android:prompt="@string/available_rooms"
                    android:spinnerMode="dialog"
                    android:theme="@style/ThemeSpinner" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/talk_description_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/talk_description"
                    style="@style/TalkFormFields"
                    android:hint="@string/hint_talk_description"
                    android:imeOptions="actionNext"
                    android:maxLines="2" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/talk_twitter_speaker_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/talk_twitter_speaker"
                    style="@style/TalkFormFields"
                    android:hint="@string/hint_talk_twitter_speaker"
                    android:imeOptions="actionNext" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    style="@style/TalkFormFields"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/load_photo"
                    android:textColor="@color/color_text_talk_item" />

                <LinearLayout
                    android:id="@+id/picture_buttons_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/camera_button"
                        android:layout_width="@dimen/circular_button_width"
                        android:layout_height="@dimen/circular_button_height"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/circular_camera_button" />

                    <ImageView
                        android:id="@+id/photo_button"
                        android:layout_width="@dimen/circular_button_width"
                        android:layout_height="@dimen/circular_button_height"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16dp"
                        android:background="@drawable/circular_photo_button" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/picture_taken_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/picture"
                        android:layout_width="@dimen/picture_dimen"
                        android:layout_height="@dimen/picture_dimen"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/clear_picture_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/clear"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>